--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
+    "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0"
   },
   "devDependencies": {
