--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
+    "react-redux": "^8.1.3",
     "react-router-dom": "^6.17.0",
     "styled-components": "^6.1.0"
   },
